--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "firebase": "^9.23.0",
-    "helmet": "^7.0.0"
+    "firebase-admin": "^11.9.0",
+    "helmet": "^7.0.0",
+    "mongoose": "^7.3.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
+    "@types/firebase": "^3.2.1",
     "@types/helmet": "^4.0.0",
     "@types/node": "^20.3.1",
     "ts-node-dev": "^2.0.0",
