--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "@types/express": "^4.17.17",
     "@types/firebase": "^3.2.1",
     "@types/helmet": "^4.0.0",
+    "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
+    "jest": "^29.5.0",
+    "ts-jest": "^29.1.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.3"
   }
